banner section done

--- a/index.html
+++ b/index.html
@@ -60,43 +60,44 @@
           </div>
     </nav>
 
-    <header class="container mx-auto mt-6">
-        <div class="carousel flex w-full lg:flex lg:relative">
+    <header class="container flex mx-auto mt-6">
+        <div class="carousel flex w-full h-[600px] lg:flex lg:relative">
             <div id="slide1" class="carousel-item relative w-full">
-              <img src="./Images/1.png" class="w-full h-3/5 object-fill" />
+              <img src="./Images/1.png" class="w-full object-fill" />
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                <a href="#slide4" class="btn btn-circle">❮</a> 
-                <a href="#slide2" class="btn btn-circle absolute left-20">❯</a>
+                <a href="#slide4" class="btn btn-circle bg-red-500 text-white">❮</a> 
+                <a href="#slide2" class="btn btn-circle absolute left-20 bg-red-500 text-white">❯</a>
               </div>
             </div> 
             <div id="slide2" class="carousel-item relative w-full">
-              <img src="./Images/2.png" class="w-full h-3/5 object-fill" />
+              <img src="./Images/2.png" class="w-full object-fill" />
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                <a href="#slide1" class="btn btn-circle">❮</a> 
-                <a href="#slide3" class="btn btn-circle absolute left-20">❯</a>
+                <a href="#slide1" class="btn btn-circle bg-red-500 text-white">❮</a> 
+                <a href="#slide3" class="btn btn-circle absolute left-20 bg-red-500 text-white">❯</a>
               </div>
             </div> 
             <div id="slide3" class="carousel-item relative w-full">
-              <img src="./Images/3.png" class="w-full h-3/5 object-fill" />
+              <img src="./Images/3.png" class="w-full object-fill" />
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                <a href="#slide2" class="btn btn-circle">❮</a> 
-                <a href="#slide4" class="btn btn-circle absolute left-20">❯</a>
+                <a href="#slide2" class="btn btn-circle bg-red-500 text-white">❮</a> 
+                <a href="#slide4" class="btn btn-circle absolute left-20 bg-red-500 text-white">❯</a>
               </div>
             </div> 
             <div id="slide4" class="carousel-item relative w-full">
-              <img src="./Images/4.png" class="w-full h-3/5 object-fill" />
+              <img src="./Images/4.png" class="w-full object-fill" />
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                <a href="#slide3" class="btn btn-circle">❮</a> 
-                <a href="#slide1" class="btn btn-circle absolute left-20">❯</a>
+                <a href="#slide3" class="btn btn-circle bg-red-500 text-white">❮</a> 
+                <a href="#slide1" class="btn btn-circle absolute left-20 bg-red-500 text-white">❯</a>
               </div>
             </div>
 
-            <!-- <div class="bg-black lg:w-2/5 text-white absolute rounded-lg p-5 flex justify-center mt-32 md:lg:top-5 lg:top-48 lg:left-[58%]     ">
+            <div class="bg-black lg:w-2/5 text-white absolute rounded-lg p-5 flex justify-center align-bottom md:lg:top-5 lg:top-[75%] lg:left-[58%]     ">
                 <div class="flex flex-col"><h1 class="text-xl text-start font-medium pb-3">Meet all the heroes from the field</h1>
                     <p class="text-justify opacity-80">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis qui atque culpa minus!</p></div>
-              </div> -->
+              </div>
 
           </div>
+
     </header>
       
     <section class=" container mx-auto mt-6 flex flex-row lg:flex-col justify-center items-center">
