client section doneagain

--- a/index.html
+++ b/index.html
@@ -562,13 +562,13 @@
     <section class="container mx-auto mt-8 flex flex-col lg:flex-row justify-evenly items-center py-6 px-6 border-2 rounded-lg">
 
       <!-- image -->
-      <div class="card card-side bg-base-100 shadow-xl mb-4">
-        <img src="./Images/11.png" alt="coming soon.."/>
+      <div class="w-full flex justify-center items-center flex-1">
+        <img class="mb-4 lg:mb-0 object-fill" src="./Images/11.png" alt="coming soon.."/>
       </div>
 
         <!-- accordian -->
 
-        <div class="flex flex-col gap-1">
+        <div class="flex flex-col justify-center items-center gap-1 flex-1">
 <!-- 1st accordian -->
           <div class="collapse collapse-plus bg-base-200">
             <input type="radio" name="my-accordion-3" checked="checked" /> 
