--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
         </div>
       </section>
 
-        <!--get in touch-->
+        <!--get in touch text-->
 
         <section class="container mx-auto mt-8">
           <div class="border-dotted border-y-2 border-opacity-90 w-full flex flex-col justify-center items-center">
@@ -653,16 +653,15 @@
         </section>
 
 <!--get in touch grid-->
-        <section>Get In Touch</section>
 
 
-        <section class="container mx-auto mt-8 bg-stone-100">
+        <section class="container mx-auto mt-8 bg-stone-100 mb-8">
           <div class="border-dotted border-y-2 border-opacity-90 w-full flex flex-col justify-center items-center">
               
                   <div><h1 class="text-3xl justify-center items-center text-center py-2">Social Media</h1>
                   </div>
                   
-                  <div class="space-y-3 cursor-pointer">
+                  <div class="space-y-3 cursor-pointer mb-3">
                     <i class="fa-brands fa-facebook pr-3"></i>
                     <i class="fa-brands fa-github pr-3"></i>
                     <i class="fa-brands fa-twitter pr-3"></i>
@@ -671,7 +670,28 @@
           </div>
           </section>
 
-        <footer></footer>
+          <footer class="footer p-10 bg-neutral text-neutral-content">
+            <nav>
+              <header class="footer-title">Services</header> 
+              <a class="link link-hover">Branding</a>
+              <a class="link link-hover">Design</a>
+              <a class="link link-hover">Marketing</a>
+              <a class="link link-hover">Advertisement</a>
+            </nav> 
+            <nav>
+              <header class="footer-title">Company</header> 
+              <a class="link link-hover">About us</a>
+              <a class="link link-hover">Contact</a>
+              <a class="link link-hover">Jobs</a>
+              <a class="link link-hover">Press kit</a>
+            </nav> 
+            <nav>
+              <header class="footer-title">Legal</header> 
+              <a class="link link-hover">Terms of use</a>
+              <a class="link link-hover">Privacy policy</a>
+              <a class="link link-hover">Cookie policy</a>
+            </nav>
+          </footer>
 
 
 
