--- a/index.html
+++ b/index.html
@@ -670,19 +670,59 @@
 
 <!-- login form -->
 
-<section class="container mx-auto">
+<section class="container mx-auto mb-8">
 
   <!-- main div -->
   <div class="grid grid-cols-1 lg:grid-cols-7 grid-rows-6 gap-4">
 
-    <div class="lg:col-span-3 bg-red-300 h-3">
-      <div class="lg:col-span-4">
- 
-      
-      </div>
+<!-- row-1 -->
+
+    <div class="lg:col-span-3 row-span-2 bg-red-300 h-3">
     </div>
 
+    <div class="lg:col-span-2">
+      <label for="text">Your Name</label>
+      <input type="text" placeholder="Enter Your Name" class="input input-bordered input-md w-full max-w-xs" />
+    </div>
 
+    <div class="lg:col-span-2 <label for="text">Your Email</label>
+      <input type="text" placeholder="Enter Your Email ID" class="input input-bordered input-md w-full max-w-xs">
+    </div>
+
+<!-- row-2 -->
+
+<div class="lg:col-span-2">
+  <label for="text">Subject</label>
+  <input type="text" placeholder="Write Here your Desire issue" class="input input-bordered input-md w-full max-w-xs" />
+</div>
+
+<div class="lg:col-span-2 <label for="text">Phone</label>
+  <input type="number" placeholder="Enter Your Phone Number" class="input input-bordered input-md w-full max-w-xs">
+</div>
+
+<!-- row-3 -->
+
+    <div class="lg:col-span-3 row-span-2 bg-red-300 h-3">
+    </div>
+
+    <div class="lg:col-span-4 row-span-4">
+      <textarea name="textarea" id="textarea" cols="75" rows="5">Write Your Message</textarea>
+    </div>
+
+<!-- row-4 -->
+
+<!-- row-5 -->
+
+    <div class="lg:col-span-3 row-span-2 bg-red-300 h-3">
+    </div>
+
+<!-- row-6 -->
+
+    <div class="lg:col-span-3 row-span-2 h-3">
+    </div>
+    <div class="lg:col-span-4 bg-red-500 h-3 btn hover:bg-red-800">
+    <button class="text-white text-lg ">Send Message</button>
+    </div>
 
   </div>
   
