--- a/index.html
+++ b/index.html
@@ -677,7 +677,12 @@
 
 <!-- row-1 -->
 
-    <div class="lg:col-span-3 row-span-2 bg-red-300 h-3">
+    <div class="lg:col-span-3 row-span-2 bg-slate-100">
+      <div class="flex flex-col justify-center pl-5">
+        <img class="w-8 pt-4" src="./Images/Group 1171275317.png" alt="">
+        <p class="mt-2 opacity-85">Phone Number</p>
+        <p class="mt-2 pb-3 font-semibold">+880-1912-333460</p>
+      </div>
     </div>
 
     <div class="lg:col-span-2">
@@ -702,7 +707,13 @@
 
 <!-- row-3 -->
 
-    <div class="lg:col-span-3 row-span-2 bg-red-300 h-3">
+    <div class="lg:col-span-3 row-span-2 bg-orange-100">
+      <div class="flex flex-col justify-center pl-5">
+        <img class="w-8 pt-4" src="./Images/Group 1171275318.png" alt="">
+        <p class="mt-2 opacity-85">Email</p>
+        <p class="mt-2 pb-3 font-semibold">zamanbd20@gmail.com</p>
+      </div>
+      
     </div>
 
     <div class="lg:col-span-4 row-span-4">
@@ -713,7 +724,13 @@
 
 <!-- row-5 -->
 
-    <div class="lg:col-span-3 row-span-2 bg-red-300 h-3">
+    <div class="lg:col-span-3 row-span-2">
+
+      <div class="flex flex-col justify-center pl-5 bg-lime-100">
+        <img class="w-8 pt-4" src="./Images/Group 1171275321.png" alt="">
+        <p class="mt-2 opacity-85">Location</p>
+        <p class="mt-2 pb-3 font-semibold">46/2, Zigatola, Dhanmondi, Dhaka</p>
+      </div>
     </div>
 
 <!-- row-6 -->
