Banner section final touch

--- a/index.html
+++ b/index.html
@@ -61,45 +61,73 @@
     </nav>
 <!-- banner section -->
 
-    <header class="container flex mx-auto mt-6">
-        <div class="carousel flex w-full h-[600px] lg:flex lg:relative">
-            <div id="slide1" class="carousel-item relative w-full">
+    <header class="container flex mx-auto mt-6 relative">
+        <div class="carousel flex w-full lg:h-[650px] lg:flex lg:relative">
+            <div id="slide1" class="carousel-item lg:relative w-full">
               <img src="./Images/1.png" class="w-full object-fill" />
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                 <a href="#slide4" class="btn btn-circle bg-red-500 text-white">❮</a> 
                 <a href="#slide2" class="btn btn-circle absolute left-20 bg-red-500 text-white">❯</a>
               </div>
+
+              <div class="bg-black lg:w-2/5 text-white lg:absolute rounded-lg p-5 md:lg:top-5 lg:top-[75%] lg:left-[58%]     ">
+                <div class="flex flex-col"><h1 class="text-xl text-start font-medium pb-3">Meet all the heroes from the field</h1>
+                    <p class="text-justify opacity-80">Meet all of our heroes who have done a great job in their own filed. They have enough skill to explore You & You hear off-course. Let's try something new.</p></div>
+              </div>
+
             </div> 
+
             <div id="slide2" class="carousel-item relative w-full">
               <img src="./Images/2.png" class="w-full object-fill" />
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                 <a href="#slide1" class="btn btn-circle bg-red-500 text-white">❮</a> 
                 <a href="#slide3" class="btn btn-circle absolute left-20 bg-red-500 text-white">❯</a>
               </div>
+
+              <div class="bg-black lg:w-2/5 text-white lg:absolute rounded-lg p-5 md:lg:top-5 lg:top-[75%] lg:left-[58%]     ">
+                <div class="flex flex-col"><h1 class="text-xl text-start font-medium pb-3">Meet all the heroes from the field</h1>
+                    <p class="text-justify opacity-80">Meet all of our heroes who have done a great job in their own filed. They have enough skill to explore You & You hear off-course. Let's try something new.</p></div>
+              </div>
+
             </div> 
+
             <div id="slide3" class="carousel-item relative w-full">
               <img src="./Images/3.png" class="w-full object-fill" />
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                 <a href="#slide2" class="btn btn-circle bg-red-500 text-white">❮</a> 
                 <a href="#slide4" class="btn btn-circle absolute left-20 bg-red-500 text-white">❯</a>
               </div>
+
+              <div class="bg-black lg:w-2/5 text-white lg:absolute rounded-lg p-5 md:lg:top-5 lg:top-[75%] lg:left-[58%]     ">
+                <div class="flex flex-col"><h1 class="text-xl text-start font-medium pb-3">Meet all the heroes from the field</h1>
+                    <p class="text-justify opacity-80">Meet all of our heroes who have done a great job in their own filed. They have enough skill to explore You & You hear off-course. Let's try something new.</p></div>
+              </div>
+
             </div> 
+
             <div id="slide4" class="carousel-item relative w-full">
               <img src="./Images/4.png" class="w-full object-fill" />
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                 <a href="#slide3" class="btn btn-circle bg-red-500 text-white">❮</a> 
                 <a href="#slide1" class="btn btn-circle absolute left-20 bg-red-500 text-white">❯</a>
               </div>
-            </div>
 
-            <div class="bg-black lg:w-2/5 text-white absolute rounded-lg p-5 flex justify-center align-bottom md:lg:top-5 lg:top-[75%] lg:left-[58%]     ">
+              <div class="bg-black lg:w-2/5 text-white lg:absolute rounded-lg p-5 md:lg:top-5 lg:top-[75%] lg:left-[58%]     ">
                 <div class="flex flex-col"><h1 class="text-xl text-start font-medium pb-3">Meet all the heroes from the field</h1>
-                    <p class="text-justify opacity-80">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis qui atque culpa minus!</p></div>
+                    <p class="text-justify opacity-80">Meet all of our heroes who have done a great job in their own filed. They have enough skill to explore You & You hear off-course. Let's try something new.</p></div>
               </div>
+            </div>
 
           </div>
 
     </header>
+
+    <!-- Meet all the heroes from the field -->
+
+    <div class=" lg:hidden text-white bg-black container mx-auto mt-5">
+      <div class="flex flex-col"><h1 class="text-xl text-start font-medium  p-3">Meet all the heroes from the field</h1>
+          <p class="text-justify opacity-80 p-3">Meet all of our heroes who have done a great job in their own filed. They have enough skill to explore You & You hear off-course. Let's try something new.</p></div>
+    </div>
       <!-- hockey club  -->
 
     <section class=" container mx-auto mt-8 flex flex-col justify-center items-center">
