--- a/index.html
+++ b/index.html
@@ -592,12 +592,12 @@
 
       <!-- image -->
       <div class=" w-[100%] lg:w-[50%] flex justify-center items-center">
-        <img class="mb-4 w-[575px] lg:object-cover object-fill" src="./Images/11.png" alt="coming soon.."/>
+        <img class="mb-4 lg:w-[575px] object-fill" src="./Images/11.png" alt="coming soon.."/>
       </div>
 
         <!-- accordian -->
 
-        <div class="flex flex-col justify-center items-center gap-1">
+        <div class="flex flex-col justify-center items-center gap-1 lg:w-[50%]">
 <!-- 1st accordian -->
           <div class="collapse collapse-plus bg-base-200">
             <input type="radio" name="my-accordion-3" checked="checked" /> 
